<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">research-android</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_button_name">登录</string>
    <string name="register_button_name">注册</string>
    <string name="png_name">图片</string>
    <string name="welcome">欢迎进入</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>

</resources>